unpackaged/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Tracks all $ budget changes from both the Marketing Plan and Campaign objects for further reporting and tracking.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>ADT-{000000}</displayFormat>
        <label>Audit Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>