unpackaged/main/default/objects/Audit_Log__c/fields/Amount_of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Adjustment__c</fullName>
    <label>Amount of Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>