unpackaged/main/default/objects/Audit_Log__c/fields/Marketing_Plan_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Plan_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Plan Transfer</label>
    <referenceTo>MarketingPlanAdjustments__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>