unpackaged/main/default/objects/Audit_Log__c/fields/Related_Campaign_Record__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campaign of the adjustment</description>
    <label>Related Campaign Record</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Audit Logs</relationshipLabel>
    <relationshipName>Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>