unpackaged/main/default/objects/Audit_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Marketing_Plan_Transfer__c</columns>
    <columns>Related_Marketing_Plan__c</columns>
    <columns>Related_Campaign_Record__c</columns>
    <columns>Amount_of_Adjustment__c</columns>
    <columns>New_Total_Value__c</columns>
    <columns>Old_Total_Value__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>